fix: remove horizontal scroll

--- a/apps/site/src/components/Footer/Footer.module.scss
+++ b/apps/site/src/components/Footer/Footer.module.scss
@@ -11,22 +11,3 @@
 	text-align: center;
 	margin-bottom: 0;
 }
-
-@include variables.media-breakpoint-down(md) {
-	.socials {
-		grid-template-columns: repeat(4, 10vw);
-	}
-}
-
-@include variables.media-breakpoint-down(sm) {
-	.socials {
-		column-gap: 10vw;
-	}
-}
-
-@include variables.media-breakpoint-up(lg) {
-	.socials {
-		grid-template-columns: repeat(4, 80px);
-		column-gap: 20px;
-	}
-}
